<resources>
    <string name="app_name">Hunter Hub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="idScript">AKfycbzi4t6c3QGS_FuUnGle9SldM2dQ_Nu4dTrn1YSR6L4dtPBvC4fIcEh01rutw43yr-g8</string>
    <string name="idSheet">1tT1q8ltoJNeAnMshA-JMYRgZb7Fkslj4ZxMYcMAsNR4</string>

    <string name="ingrese_usuario">Ingrese Usuario</string>
    <string name="ingrese_password">Ingrese Contraseña</string>
    <string name="contrasena">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="ingrese_nombre">Ingrese Nombre</string>
    <string name="nombre">Nombre</string>
    <string name="ingrese_apellidos">Ingrese Apellidos</string>
    <string name="nuevo_registro">Nuevo Registro</string>
    <string name="kgsolution">KGSolutions</string>
    <string name="Pendientes_Aprobación">Pendientes de Aprobación</string>
    <string name="archivos">Archivos</string>
    <string name="registros">Registrar</string>
    <string name="saldo_contable">Saldo disponible</string>
    <string name="titleSettings">Ajustes</string>
    <string name="CajaChica">Caja chica</string>
    <string name="urlScrip">Url</string>
    <string name="fileDrive">Folder google Drive</string>
    <string name="FichasTecnicas">Fichas Tecnicas</string>
    <string name="Cancelar">Cancelar</string>
    <string name="btn_add_equipment">Agregar</string>
    <string name="Resumen_costos">Resumen costos</string>
    <string name="Resumen_cantidad">Cantidad registros</string>
    <string name="con_sustento">Con\nSustento</string>
    <string name="sin_sustento">Sin\nSustento</string>
    <string name="nro_registros">Cantidad de Registros por categoria y tipo</string>
    <string name="total_Categoria">Total</string>
    <string name="Lista_Archivos">LISTA DE ARCHIVOS</string>
    <string name="idSheedFichas">Sheet</string>
    <string name="brand">Lista de marcas</string>
    <string name="liquidacion">Liquidaciones</string>
    <string name="Lista_Liquidaciones">LISTA DE LIQUIDACIONES</string>
    <string name="sheetLiquidacion">Sheet Liquidación</string>
    <string name="tittle_resumen">Resumen</string>
    <string name="MontoCajaChica">Caja Chica</string>
    <string name="IngreseNombreHoja">Nueva hoja</string>
    <string name="mensajeAdvertencia">Esta Creando un documento vacio se recomienda agregar los siguientes datos:\n- Nombre de la hoja\n- Destino\n- fecha o rango de fechas</string>
    <string name="ControlEquipos">Control de equipos</string>
    <string name="AddFunction">Agregar Funcion</string>
    <string name="Contact">Contáctenos</string>
    <string name="send">Enviar</string>
    <string name="About_Us">Acerca de</string>
    <string name="IngreseIdentificacion">Ingrese DNI</string>

</resources>